September 17 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Now compiles on Linux again
	
September 23 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Monster generation *might* be a bit better again
	* Corrected a minor outlook bug in the equipment pictures around
	  the silhouette
	* Corrected a minor outlook bug in the equipment screen
	* Added colored light effects for many monsters and items

September 22 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Added parentheses around several macros in ivandef.h
	* Added MakeRGB24(), GetRed24(), GetGreen24() and GetBlue24() inline
	  functions
	* Renamed old color handling routines to MakeRGB16() etc.
	* Added rgb24 function to script and renamed rgb to rgb16
	* Emitation and luminance are 24 bit rgb values; lights may now be
	  colored and they can be mixed dynamically
	* Note: since rgb elements are in the range 0-255 instead of 0-511,
	  old light values are converted to new ones like this:
	  MakeRGB24(Light / 2, Light / 2, Light / 2)

September 17 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Flies added
	* Items inside chests carrid by player at death shown
	* 3 configurations added to chests: small, normal, large
	* GCC define added to configure.in
	* StorageVolume moved to script for chests
	* Added MaxGeneratedContainedItems for chests' parameters
	* deactivated Scabies temporarily
	* Fixed msg when trying to put chest into the same chest

September 17 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Capitalization functions of festring are now more flexible
	* Added festring::IgnoreCaseFind() which acts like std::string::find() except
	  that it ignores case
	* Wish parser is no longer case sensitive
	* Added SoCM alias for scroll of change material
	* Position script now allows one to select a random squares inside arbitrary
	  rectangles
	* Added owterrain classes and script entries for New Attnam and the underwater
	  tunnel
	* Added femath::CompareBits() which allows easy ordering of POD objects