@@ -90,7 +90,7 @@ Items inside chests carried by player at death should be shown. (hex)
 //"You didn't manage to get onto the high score list" message.
 //Glitter effect.
 //Fire effect.
-Lightning effect.
+/Lightning effect.
 Flies over spoiling items effect.
 (s) Monster mine triggering should be limited.
 //Boots and gauntlets should be generated in pairs of two.
@@ -111,12 +111,12 @@ Kick system should be checked. (timo)
 //Kamikaze dwarves should be separated by colours.
 Manual.
 //Item possibilities. (timo)
-Skull. (hex)
+//Skull. (hex)
 //Wand of cloning. (hex)
 Water should make gunpowder useless!
 Temporary invisibility should be cancelled if the character hits something.
-Applying a whistle should set the waypoint of all monsters in the level to point to the square under the player. (hex)
-Prevent digging with a broken pick-axe.
+//Applying a whistle should set the waypoint of all monsters in the level to point to the square under the player. (hex)
+//Prevent digging with a broken pick-axe.
 Stethoscope should show relative danger.
 Remove the school food effects of scabies (or make them a lot more seldom).
 Raven.
@@ -125,3 +125,4 @@ Prohibit spoiling in shops and on the cathedral floor.
 Mellis should give information about unknown gods.
 Whips shouldn't really break when hitting armor.
 Balancing Loricatus.
+/Flies should tell about spoilage.
